fixtures/frontend/milestone-1/invalid/markup_child_interpolation.aivi
value brokenView =
    <Label>{current}</Label>
